Fix alignment in header

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  align-items: center;
   position: relative;
   height: 520px;
   background-color:#ffebcd;
